# rag

./: lab_1.ipynb  lab_2.ipynb  lab_3.ipynb  pyproject.toml  requirements.txt
vector_db/: chroma.sqlite3
